--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Welcome to Robot Gedek. Let's make much wow money.</h1>
-        <img src="https://www.supercryptonews.com/wp-content/uploads/2020/07/doge.jpg" />
+        <img src="https://www.afponline.org/images/default-source/default-album/machinelearning.jpg" />
     </body>
 </html>
