--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Welcome to Robot Gedek. Let's make much wow money.</h1>
+        <h1>Welcome to Robot Gedek Trading Bot. Let's make much wow money.</h1>
         <img src="https://www.afponline.org/images/default-source/default-album/machinelearning.jpg" />
     </body>
 </html>
