--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Welcome to Robot Gedek Trading Bot.</h1>
-        <br>Mudeng ora mudeng karepmu cuk!
+        <br>Mudeng ora mudeng karepmu cuk!</br>
+        <hr>
         <img src="https://www.afponline.org/images/default-source/default-album/machinelearning.jpg" />
     </body>
 </html>
