better lah dude

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Welcome to Robot Gedek Trading Bot.</h1>
+        <h1>Welcome to Gedek Trade Strategy.</h1>
         <br>Mudeng ora mudeng karepmu cuk!</br>
         <hr>
         <img src="https://www.afponline.org/images/default-source/default-album/machinelearning.jpg" />
